# CosmiTestLCIO

./: README.md  setup.sh  user-pro-test_x86_64_gcc44_sl6.cmake
RootTreeWriter/: CMakeLists.txt
RootTreeWriter/.svn/: all-wcprops  entries
RootTreeWriter/.svn/text-base/: .gitignore.svn-base
RootTreeWriter/cmake/: MacroCheckDeps.cmake  RootTreeWriterConfig.cmake.in
RootTreeWriter/cmake/.svn/: all-wcprops  entries
RootTreeWriter/doc/: install.doxy
RootTreeWriter/doc/.svn/: all-wcprops  entries
RootTreeWriter/engines/: .__afsEE2B  ASimCalorimeterHitWriteEngine.cc  ASimCalorimeterHitWriteEngine.hh  CollectionParameterWriteEngine.cc  DeepAnaWriteEngine.cc  DeepAnaWriteEngine.hh  DriftChamberWriteEngine.cc  EnginesAdd.icc  EnginesInclude.icc  EventParameterWriteEngine.cc  HcalTrackLarsEngine.cc  HitWriteEngine.cc  HitWriteEngine.hh  HodoscopeWriteEngine.cc  HodoscopeWriteEngine.hh  ShowerShapeEngine.cc  TBTrackWriteEngine.hh  TrackFinderWriteEngine.cc  onePC1.txt  onePC2.txt
RootTreeWriter/engines/.svn/: all-wcprops  entries
RootTreeWriter/include/.svn/: all-wcprops  entries
RootTreeWriter/src/: GNUmakefile  RootTreeWriter.cc
RootTreeWriter/src/.svn/: all-wcprops  entries
calice_analysis/addonProcs/: CMakeLists.txt
calice_analysis/addonProcs/.svn/: all-wcprops  entries
calice_analysis/addonProcs/cmake/: CALICEANALYSISConfig.cmake.in
calice_analysis/addonProcs/doc/: Doxyfile.in
calice_analysis/addonProcs/include/: DEHEventDisplayProcessor.hh  angleTrackFinder.hh  myClusterOrdering.hh
calice_analysis/addonProcs/src/: AppendIntegralObservables.cc  AppendMCParticleInformation.cc  CMakeLists.txt  ClusterPatternProcessor.cc  ConvertPositionToLayer.cc  EmcTrackBitGenerator.cc  EventSelector.cc  HCalPIDProcessor.cc  HcalTrackingNN.cc  McSplitter.cc  MultiBitGenerator.cc  PrimaryTrackFinder.cc  RemoveBadCells.cc  ScECALElectronAnalysisTemplate.cc  TcmtEventTypeProcessor.cc  VirtualCells.cc  VirtualCellsCalculator.cc  mappingIconditionsProcessor.cc  slimLCIOfile.cc
calice_calib/calibmulti/src/: CMakeLists.txt
calice_calib/deadAndNoisyTools/src/: CMakeLists.txt  ModuleType.cxx  NamingConvetion.txt  RunComparator.cxx  SimpleMapper.cxx  SpectrumPropertiesRunInfo.cxx  createBadChannelsList.cpp  createSpriTree.cpp  testRunComparator.cpp  testSimpleMapper.cpp
calice_calib/fitmip/src/: Bezier.cc  CMakeLists.txt  Langaus.cc  fitMIP.cc
calice_cddata/: BuildSetup.cmake  CMakeLists.txt  README  env.sh
calice_cddata/.svn/: all-wcprops  entries
calice_cddata/ahc2_mapping/: CreateDescription.cpp  ModuleDescription_LeftReadout.txt  ModuleDescription_RightReadout.txt  ModuleDescription_TopReadout_Inversed.txt  README  createEPTModuleConnection.cc
calice_cddata/ahc2_mapping/.svn/: all-wcprops  entries
calice_cddata/ahc_map/: CMakeLists.txt
calice_cddata/ahc_map/.svn/: all-wcprops  entries
calice_cddata/ahc_map/src/: AHCHcalEntry.cc  AHCPinEntry.cc  AHCPmtEntry.cc  AHCReader.cc  AHCTcmtEntry.cc  HcalSetup.cc
calice_cddata/conddb_inputs/: cern_beamparamsexception300269.txt  cern_beamparamsexception300676.txt  cern_beamparamsexception300691.txt  cern_beamparamsexception300698.txt  cern_beamparamsexception300698.txt~  cern_locationdata_comb07.txt  cern_locationdata_comb1.txt~  cern_locationdata_hcal1.txt~  cern_locationdata_hcal2.txt~  desy_locationdata_ecal07.txt  desy_locationdata_ecal07.txt~  ecal_position_cern_20060724_rot0.txt.bkup  ecal_position_cern_20060724_rot45.txt.bkup  ecal_position_cern_20060724_rot45.txt~  ecal_position_cern_20060826_rot45.txt  ecal_position_cern_20060829_rot0.txt  ecal_position_cern_20060829_rot20.txt~  ecal_position_cern_20060904_rot0.txt  ecal_position_cern_20060924_rot0.txt.bkup  ecal_position_desy_rot0_1.txt~  ecal_position_desy_rot0_1_null.txt  ecal_position_desy_rot45.txt~  ecal_position_desy_rot45_null.txt  ecal_position_fnal_fnal08_rot10.txt  ecal_position_fnal_fnal08_rot20.txt  ecal_position_fnal_fnal08_rot30_2.txt  fnal_locationdata_comb08.txt  fnal_locationdata_comb11.txt  fnal_locationdata_dhcal11.txt  fnal_locationdata_hcal08.txt  geometry_cern_2006_08_26_rot45.txt  geometry_cern_2006_08_29_rot0.txt  geometry_cern_2006_08_29_rot0.txt.nkup  geometry_cern_2007_06_22_rot0.txt~  geometry_cern_2007_07_05_rot0.txt  geometry_cern_2007_07_26_rot0.txt  geometry_cern_2007_07_26_rot10.txt  geometry_cern_2007_07_26_rot10.txt~  geometry_fnal_2008_04_24_rot0.txt  geometry_fnal_2008_05_26_rot10.txt  (+29 more)
calice_cddata/conddb_inputs/.svn/: all-wcprops  entries
calice_cddata/dbfill/: CMakeLists.txt  GNUmakefile  browseHoldVals.cc  browseInfoAt.cc  collectionParameterHelper.hh  connmaptodb.cc  createBeamParameterConddata.hh  createBeamParameterData.cc  createDetectorTransformation.cc  createEPTModuleLocation.cc  createEcalCalibrationConstantsConddata.hh  createEcalModuleLocationConddata.hh  createExperimentalSetupSimple.cc  createHcalGeometryData.cc  createRunLocationConddata.cc  createRunLocationConddata.hh  createRunTimeInfo.cc  createTcmtConnection.cc  createTcmtDescription.cc  createTcmtMIPCalibration.cc  createTcmtSaturationConstants.cc  createTriggerAssignmentConddata.hh  createdbfile.cc  dacvalcalc.cc  getRunTimeInfo.cc  hcalboards_connfromdb.cc  hcalboards_conntodb.cc  hcalcassvscrctodb.cc  hcalmapfromdb.cc  stro.hh  tagdbfolder.cc  triggerchecktodb.cc  triggerfromdb.cc  triggermaptodb.cc  writeAhc2HardwareConnection.cc  writeLCGenericObject.hh  writeLinearFitConstants.cc  writeLinearFitSlopes.cc  writeSaturationParameters.cc  writeScECALGainfit.cc  (+3 more)
calice_cddata/dbfill/.svn/: all-wcprops  entries
calice_cddata/dbfill/ReadDaqMap/: FeConnectionDef_t.hh  ReadDaqMap.cc  ReadDaqMap.hh  TLineIterator.cc  TLineIterator.hh  getRunStartTime.hh
calice_cddata/dbfill/RootTools/: TDirIter.cc  TDirIter.hh  find.cc  find.hh
calice_cddata/dbfillExamples/: Instructions.txt  PushAllSingleGainsToDB.sh  copyCalibration.sh  pushSingleGainToDB.sh  pushSingleICToDB.sh  tagFolderList.sh
calice_cddata/dbfillExamples/.svn/: all-wcprops  entries
calice_cddata/doc/: Doxyfile
calice_cddata/doc/.svn/: all-wcprops  entries
calice_sim/.svn/: entries  (+1 more)
(+1253 files in other folders)
